# tunic_language

./: .gitignore  .gitpod.yml  Dockerfile  README.md  app.py  lambda_function.py  main.py  openapi.yaml  readme.md  requirements.txt
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  Rune.css  Rune.tsx  RuneCanvas.tsx  RuneInput.css  RuneInput.tsx  RuneKeyboard.css  RuneKeyboard.tsx  TextArea.css  TextArea.tsx  Translate.css  Translate.tsx  consts.tsx  index.css  util.tsx
mappings/: IPA.runes  characters.txt  cmudict.IPA  cmudict.characters  mappings.py  test.py
scripts/: package.sh
tunic_language/: MANIFEST.in  README.md  readme.md  setup.cfg  translation.py
tunic_language/references/: CMUDict.txt
tunic_language/src/tunic_language/: cmudict.IPA  mappings.py  translation.py
tunic_language/test/: test.py
