[metadata]
name = tunic-language-YI-JIAHE
version = 0.0.5
author = Yi Jiahe
# author_email = author@example.com
description = Tools for working with the tunic language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires = 
    nltk

[options.packages.find]
where = src